# upflib

./: CHANGELOG.md  CMakeLists.txt  README.md
doc/: mainpage.md
examples/: CMakeLists.txt  copygtp.cpp  encapgtp.cpp  ipv4address.cpp  macaddress.cpp  matchingrule.cpp  printsize.cpp  readpcap2.cpp  repeater.cpp  sample1.cpp
lib/include/upfdumperlib/: dumper.hh
lib/include/upfnetworklib/: buffers.hh  ethernet.hh  gtp_u.hh  gtp_u_encap.hh  interfaces.hh  ipv4.hh  ipv4encap.hh  networklib.hh  pcap.hh  processor.hh  sctp.hh  tcp.hh  udp.hh  utils.hh
lib/include/upfrawsocketslib/: rawsockets.hh
lib/include/upfrouterlib/: gtpencapsink.hh  processor.hh  router.hh  rulematcher.hh  upfrouterlib.hh
lib/include/upfs1aplib/: decoders.hh  processor.hh  s1aplib.hh
lib/src/: CMakeLists.txt
lib/src/upfasn1lib/: 3GPP_TS_36.413_v14.4.0.asn  CMakeLists.txt  S1AP_Additional-GUTI.c  S1AP_Additional-GUTI.h  S1AP_AdditionalCSFallbackIndicator.c  S1AP_AdditionalCSFallbackIndicator.h  S1AP_AllocationAndRetentionPriority.c  S1AP_AllocationAndRetentionPriority.h  S1AP_AreaScopeOfMDT.c  S1AP_AreaScopeOfMDT.h  S1AP_AssistanceDataForCECapableUEs.c  S1AP_AssistanceDataForCECapableUEs.h  S1AP_AssistanceDataForPaging.c  S1AP_AssistanceDataForPaging.h  S1AP_AssistanceDataForRecommendedCells.c  S1AP_AssistanceDataForRecommendedCells.h  S1AP_BPLMNs.c  S1AP_BPLMNs.h  S1AP_BearerType.c  S1AP_BearerType.h  S1AP_Bearers-SubjectToStatusTransfer-Item.c  S1AP_Bearers-SubjectToStatusTransfer-Item.h  S1AP_Bearers-SubjectToStatusTransferList.c  S1AP_Bearers-SubjectToStatusTransferList.h  S1AP_BitRate.c  S1AP_BitRate.h  S1AP_BroadcastCancelledAreaList.c  S1AP_BroadcastCancelledAreaList.h  S1AP_BroadcastCompletedAreaList.c  S1AP_BroadcastCompletedAreaList.h  S1AP_CE-mode-B-SupportIndicator.c  S1AP_CE-mode-B-SupportIndicator.h  S1AP_CELevel.c  S1AP_CELevel.h  S1AP_CGI.c  S1AP_CGI.h  S1AP_CI.c  S1AP_CI.h  S1AP_CNDomain.c  S1AP_CNDomain.h  (+998 more)
lib/src/upfdumperlib/: CMakeLists.txt  dumper.cpp  dumperS1AP.cpp
lib/src/upfnetworklib/: CMakeLists.txt  buffers.cpp  ethernet.cpp  gtp_u.cpp  gtp_u_encap.cpp  interfaces.cpp  ipv4.cpp  ipv4encap.cpp  pcap.cpp  processor.cpp  sctp.cpp  tcp.cpp  udp.cpp  utils.cpp
lib/src/upfrawsocketslib/: CMakeLists.txt  rawsockets.cpp
lib/src/upfrouterlib/: CMakeLists.txt  gtpencapsink.cpp  processor.cpp  router.cpp  rulematcher.cpp
lib/src/upfs1aplib/: CMakeLists.txt  processor.cpp  s1ap.cpp
